--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
                 <section class="experience">
                     <h2 class="experience__title visually-hidden">167 лет опыта</h2>
                     <div class="experience__video">
-                        <iframe
+                        <!-- <iframe
                             width="1054"
                             height="593"
                             src="https://www.youtube.com/embed/BJiucv88flM"
@@ -42,10 +42,67 @@
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin"
-                            allowfullscreen></iframe>
+                            allowfullscreen>
+                        </iframe> -->
+                    </div>
+                    <div class="experience__info">
+                        <div class="experience__info_years">
+                            <img
+                                src="./dist/img/167.svg"
+                                alt="167"
+                                width="148"
+                                height="66"
+                                class="experience__info_years-img" />
+                            <p class="experience__info_years-text">лет нашего опыта</p>
+                            <img
+                                src="./dist/img/years.svg"
+                                alt="years"
+                                width="90"
+                                height="6"
+                                class="experience__info_years-small" />
+                        </div>
+                        <div class="experience__info_text">
+                            <p class="experience__info_text-1">
+                                DuffBeer — один из мировых лидеров по производству дрожжей и других
+                                продуктов ферментации. И нам нужна сильная команда профессионалов и
+                                единомышленников, которые будут стремиться развиваться вместе с
+                                DuffBeer.
+                            </p>
+                            <p class="experience__info_text-2">
+                                Мы всегда рады принять талантливых и целеустремленных людей в нашу
+                                дружную команду! Мы ценим каждого своего сотрудника и стремимся
+                                предоставить всем равные возможности в развитии
+                                <span>и совершенств.</span>
+                            </p>
+                            <p class="experience__info_text-3">и совершенств.</p>
+                        </div>
                     </div>
                 </section>
             </div>
+
+            <section class="info">
+                <div class="container">
+                    <h2 class="info__title visually-hidden">Продукция DuffBeer</h2>
+                    <div class="info__wrapper">
+                        <button class="info__button" type="button">
+                            <svg
+                                class="info__button_img"
+                                width="47"
+                                height="60"
+                                viewBox="0 0 47 60"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M0 30.8614V29.1386L18.5468 0L22.8669 2.09738C23.5621 2.44694 24.0835 2.89638 24.4311 3.44569C24.7787 3.99501 24.9525 4.59426 24.9525 5.24345C24.9525 6.09238 24.7042 6.91635 24.2076 7.71536L12.3645 27.2659C11.6693 28.4644 10.9741 29.3883 10.2789 30.0375C11.0238 30.7366 11.719 31.6355 12.3645 32.7341L24.2076 52.2846C24.4559 52.6842 24.6297 53.1086 24.729 53.5581C24.878 54.0075 24.9525 54.432 24.9525 54.8315C24.9525 56.2297 24.2573 57.2534 22.8669 57.9026L18.5468 60L0 30.8614ZM22.0475 30.8614V29.1386L40.5943 0L44.9144 2.09738C45.6096 2.44694 46.131 2.89638 46.4786 3.44569C46.8262 3.99501 47 4.59426 47 5.24345C47 6.09238 46.7517 6.91635 46.2551 7.71536L34.412 27.2659C33.7169 28.4644 33.0217 29.3883 32.3265 30.0375C33.0713 30.7366 33.7665 31.6355 34.412 32.7341L46.2551 52.2846C46.5034 52.6842 46.6772 53.1086 46.7765 53.5581C46.9255 54.0075 47 54.432 47 54.8315C47 56.2297 46.3048 57.2534 44.9144 57.9026L40.5943 60L22.0475 30.8614Z" />
+                            </svg>
+                        </button>
+                        <p class="info__text">
+                            Каждое 3-е хлебобулочное изделие в мире произведено с использованием
+                            продукции DuffBeer
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <script defer src="./dist/js/script.js"></script>
