--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,20 @@
                     </div>
                 </div>
             </section>
+
+            <section class="mission">
+                <div class="container">
+                    <div class="mission__wrapper">
+                        <h2 class="mission__title">МИССИЯ DuffBeer</h2>
+                        <p class="mission__slogan">
+                            работать вместе, что бы лучше накормить и сохранить планету
+                        </p>
+                        <button class="button mission__button" type="button">
+                            Перейти на сайт
+                        </button>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <script defer src="./dist/js/script.js"></script>
