--- a/src/index.html
+++ b/src/index.html
@@ -132,6 +132,247 @@
                     </div>
                 </div>
             </section>
+
+            <section class="advantages">
+                <div class="container">
+                    <h2 class="advantages__title">Наши преимущества</h2>
+
+                    <div class="advantages__wrapper">
+                        <div class="advantages__swiper swiper js_swiper_advantages">
+                            <ul class="advantages__list swiper-wrapper">
+                                <li class="advantages__item swiper-slide">
+                                    <img
+                                        src="./dist/img/advantages/adv1.jpg"
+                                        alt="image1"
+                                        class="advantages__item-img"
+                                        width="356"
+                                        height="178" />
+                                    <div class="advantages__item-info">
+                                        <p class="advantages__item-text">
+                                            Уверенность в завтрашнем дне
+                                        </p>
+                                        <button
+                                            class="advantages__item-button cross js_cross"></button>
+                                        <div class="advantages__item_additional js_hidden_text">
+                                            <p class="advantages__item_additional-text">
+                                                ООО «Conecom», российское подразделение французского
+                                                концерна DuffBeer. Мы компания, которая честно ведет
+                                                свой бизнес на территории РФ, соблюдая
+                                                законодательство и гарантируя стабильность и
+                                                уверенность в завтрашнем дне.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="advantages__item swiper-slide">
+                                    <img
+                                        src="./dist/img/advantages/adv2.jpg"
+                                        alt="image2"
+                                        class="advantages__item-img"
+                                        width="356"
+                                        height="178" />
+                                    <div class="advantages__item-info">
+                                        <p class="advantages__item-text">
+                                            Безопасность на рабочем месте – приоритет №1
+                                        </p>
+                                        <button
+                                            class="advantages__item-button cross js_cross"></button>
+                                        <div class="advantages__item_additional js_hidden_text">
+                                            <p class="advantages__item_additional-text">
+                                                Вопросам безопасности и качества пищевой продукции в
+                                                нашей компании уделяется повышенное внимание. Все
+                                                производства группы DuffBeer в России постоянно
+                                                работают над улучшением процессов и стремятся
+                                                сделать все возможное, чтобы рабочий процесс был
+                                                максимально безопасным и комфортным.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="advantages__item swiper-slide">
+                                    <img
+                                        src="./dist/img/advantages/adv3.jpg"
+                                        alt="image3"
+                                        class="advantages__item-img"
+                                        width="356"
+                                        height="178" />
+                                    <div class="advantages__item-info">
+                                        <p class="advantages__item-text">
+                                            Стабильная заработная плата
+                                        </p>
+                                        <button
+                                            class="advantages__item-button cross js_cross"></button>
+                                        <div class="advantages__item_additional js_hidden_text">
+                                            <p class="advantages__item_additional-text">
+                                                Мы обеспечиваем нашим сотрудникам стабильную
+                                                заработную плату в соответствии с рынком региона.
+                                                Средний стаж работы в нашей компании – 7 лет.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="advantages__item swiper-slide">
+                                    <img
+                                        src="./dist/img/advantages/adv4.jpg"
+                                        alt="image4"
+                                        class="advantages__item-img"
+                                        width="356"
+                                        height="178" />
+                                    <div class="advantages__item-info">
+                                        <p class="advantages__item-text">
+                                            Заботимся о здоровье сотрудников
+                                        </p>
+                                        <button
+                                            class="advantages__item-button cross js_cross"></button>
+                                        <div class="advantages__item_additional js_hidden_text">
+                                            <p class="advantages__item_additional-text">
+                                                Каждый сотрудник в нашей компании обеспечен полисом
+                                                добровольного медицинского страхования. Кроме того,
+                                                на каждом заводе есть медицинский пункт для
+                                                сотрудников. Осуществляется страхование от
+                                                несчастных случаев с первого дня работы.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="advantages__item swiper-slide">
+                                    <img
+                                        src="./dist/img/advantages/adv5.jpg"
+                                        alt="image5"
+                                        class="advantages__item-img"
+                                        width="356"
+                                        height="178" />
+                                    <div class="advantages__item-info">
+                                        <p class="advantages__item-text">
+                                            Предоставление удобной спецодежды и СИЗ для
+                                            производственного персонала
+                                        </p>
+                                        <button
+                                            class="advantages__item-button cross js_cross"></button>
+                                        <div class="advantages__item_additional js_hidden_text">
+                                            <p class="advantages__item_additional-text">
+                                                Мы предоставляем удобные СИЗ и спецодежду и в случае
+                                                износа или порчи обмениваются на новые.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="advantages__item swiper-slide">
+                                    <img
+                                        src="./dist/img/advantages/adv6.jpg"
+                                        alt="image6"
+                                        class="advantages__item-img"
+                                        width="356"
+                                        height="178" />
+                                    <div class="advantages__item-info">
+                                        <p class="advantages__item-text">
+                                            Обучение: различные программы обучения и
+                                            профессиональные тренинги
+                                        </p>
+                                        <button
+                                            class="advantages__item-button cross js_cross"></button>
+                                        <div class="advantages__item_additional js_hidden_text">
+                                            <p class="advantages__item_additional-text">
+                                                Мы уделяем много внимания развитию наших
+                                                сотрудников. В компании работает Внутренний центр
+                                                обучений и ежегодно проводится большое количество
+                                                обучающих мероприятий как локально на заводах, так и
+                                                в головном офисе DuffBeer во Франции.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="advantages__item swiper-slide">
+                                    <img
+                                        src="./dist/img/advantages/adv7.jpg"
+                                        alt="image7"
+                                        class="advantages__item-img"
+                                        width="356"
+                                        height="178" />
+                                    <div class="advantages__item-info">
+                                        <p class="advantages__item-text">
+                                            Возможности для реализации творческого потенциала
+                                        </p>
+                                        <button
+                                            class="advantages__item-button cross js_cross"></button>
+                                        <div class="advantages__item_additional js_hidden_text">
+                                            <p class="advantages__item_additional-text">
+                                                Мы ставим перед собой амбициозные и интересные цели,
+                                                а реализация задач является командной работой
+                                                сотрудников из различных подразделений. Мы также
+                                                принимаем активное участие в работе над
+                                                кросс-функциональными проектам с коллегами из других
+                                                стран присутствия DuffBeer.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="advantages__item swiper-slide">
+                                    <img
+                                        src="./dist/img/advantages/adv8.jpg"
+                                        alt="image8"
+                                        class="advantages__item-img"
+                                        width="356"
+                                        height="178" />
+                                    <div class="advantages__item-info">
+                                        <p class="advantages__item-text">
+                                            Мы - семейная компания и любим проводить время вместе
+                                        </p>
+                                        <button
+                                            class="advantages__item-button cross js_cross"></button>
+                                        <div class="advantages__item_additional js_hidden_text">
+                                            <p class="advantages__item_additional-text">
+                                                Ежегодно мы проводим корпоративные мероприятия не
+                                                только для наших сотрудников, но и для семей наших
+                                                сотрудников. А корпоративные подарки для детей
+                                                сотрудников – наша добрая предновогодняя традиция.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="advantages__item swiper-slide">
+                                    <img
+                                        src="./dist/img/advantages/adv9.jpg"
+                                        alt="image9"
+                                        class="advantages__item-img"
+                                        width="356"
+                                        height="178" />
+                                    <div class="advantages__item-info">
+                                        <p class="advantages__item-text">
+                                            Мы - социально ответственная компания и заботимся об
+                                            окружающих
+                                        </p>
+                                        <button
+                                            class="advantages__item-button cross js_cross"></button>
+                                        <div class="advantages__item_additional js_hidden_text">
+                                            <p class="advantages__item_additional-text">
+                                                Наша миссия лежит в основе
+                                                социально-корпоративной ответственности. Мы ведем
+                                                свою деятельность в соответствии с тремя основными
+                                                правилами: мы заботимся о людях; наша деятельность
+                                                устойчива по своей природе; мы заботимся об
+                                                окружающей среде.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="swiper-button-prev advantages__swiper-btn_prev"></div>
+                        <div class="swiper-button-next advantages__swiper-btn_next"></div>
+                        <div class="swiper-pagination advantages__swiper-pagination"></div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <script defer src="./dist/js/script.js"></script>
