fixes and media

--- a/src/index.html
+++ b/src/index.html
@@ -141,12 +141,18 @@
                         <div class="advantages__swiper swiper js_swiper_advantages">
                             <ul class="advantages__list swiper-wrapper">
                                 <li class="advantages__item swiper-slide">
-                                    <img
-                                        src="./dist/img/advantages/adv1.jpg"
-                                        alt="image1"
-                                        class="advantages__item-img"
-                                        width="356"
-                                        height="178" />
+                                    <picture>
+                                        <source
+                                            media="(min-width: 1250px)"
+                                            srcset="./dist/img/advantages/adv1.jpg" />
+                                        <source
+                                            media="(min-width: 930px)"
+                                            srcset="./dist/img/advantages/adv1-m.jpg" />
+                                        <img
+                                            src="./dist/img/advantages/adv1-m.jpg"
+                                            alt="img1"
+                                            class="advantages__item-img" />
+                                    </picture>
                                     <div class="advantages__item-info">
                                         <p class="advantages__item-text">
                                             Уверенность в завтрашнем дне
@@ -166,12 +172,18 @@
                                 </li>
 
                                 <li class="advantages__item swiper-slide">
-                                    <img
-                                        src="./dist/img/advantages/adv2.jpg"
-                                        alt="image2"
-                                        class="advantages__item-img"
-                                        width="356"
-                                        height="178" />
+                                    <picture>
+                                        <source
+                                            media="(min-width: 1250px)"
+                                            srcset="./dist/img/advantages/adv2.jpg" />
+                                        <source
+                                            media="(min-width: 930px)"
+                                            srcset="./dist/img/advantages/adv2-m.jpg" />
+                                        <img
+                                            src="./dist/img/advantages/adv2-m.jpg"
+                                            alt="img2"
+                                            class="advantages__item-img" />
+                                    </picture>
                                     <div class="advantages__item-info">
                                         <p class="advantages__item-text">
                                             Безопасность на рабочем месте – приоритет №1
@@ -192,12 +204,18 @@
                                 </li>
 
                                 <li class="advantages__item swiper-slide">
-                                    <img
-                                        src="./dist/img/advantages/adv3.jpg"
-                                        alt="image3"
-                                        class="advantages__item-img"
-                                        width="356"
-                                        height="178" />
+                                    <picture>
+                                        <source
+                                            media="(min-width: 1250px)"
+                                            srcset="./dist/img/advantages/adv3.jpg" />
+                                        <source
+                                            media="(min-width: 930px)"
+                                            srcset="./dist/img/advantages/adv3-m.jpg" />
+                                        <img
+                                            src="./dist/img/advantages/adv3-m.jpg"
+                                            alt="img3"
+                                            class="advantages__item-img" />
+                                    </picture>
                                     <div class="advantages__item-info">
                                         <p class="advantages__item-text">
                                             Стабильная заработная плата
@@ -215,12 +233,18 @@
                                 </li>
 
                                 <li class="advantages__item swiper-slide">
-                                    <img
-                                        src="./dist/img/advantages/adv4.jpg"
-                                        alt="image4"
-                                        class="advantages__item-img"
-                                        width="356"
-                                        height="178" />
+                                    <picture>
+                                        <source
+                                            media="(min-width: 1250px)"
+                                            srcset="./dist/img/advantages/adv4.jpg" />
+                                        <source
+                                            media="(min-width: 930px)"
+                                            srcset="./dist/img/advantages/adv4-m.jpg" />
+                                        <img
+                                            src="./dist/img/advantages/adv4-m.jpg"
+                                            alt="img4"
+                                            class="advantages__item-img" />
+                                    </picture>
                                     <div class="advantages__item-info">
                                         <p class="advantages__item-text">
                                             Заботимся о здоровье сотрудников
@@ -240,12 +264,18 @@
                                 </li>
 
                                 <li class="advantages__item swiper-slide">
-                                    <img
-                                        src="./dist/img/advantages/adv5.jpg"
-                                        alt="image5"
-                                        class="advantages__item-img"
-                                        width="356"
-                                        height="178" />
+                                    <picture>
+                                        <source
+                                            media="(min-width: 1250px)"
+                                            srcset="./dist/img/advantages/adv5.jpg" />
+                                        <source
+                                            media="(min-width: 930px)"
+                                            srcset="./dist/img/advantages/adv5-m.jpg" />
+                                        <img
+                                            src="./dist/img/advantages/adv5-m.jpg"
+                                            alt="img5"
+                                            class="advantages__item-img" />
+                                    </picture>
                                     <div class="advantages__item-info">
                                         <p class="advantages__item-text">
                                             Предоставление удобной спецодежды и СИЗ для
@@ -263,12 +293,18 @@
                                 </li>
 
                                 <li class="advantages__item swiper-slide">
-                                    <img
-                                        src="./dist/img/advantages/adv6.jpg"
-                                        alt="image6"
-                                        class="advantages__item-img"
-                                        width="356"
-                                        height="178" />
+                                    <picture>
+                                        <source
+                                            media="(min-width: 1250px)"
+                                            srcset="./dist/img/advantages/adv6.jpg" />
+                                        <source
+                                            media="(min-width: 930px)"
+                                            srcset="./dist/img/advantages/adv6-m.jpg" />
+                                        <img
+                                            src="./dist/img/advantages/adv6-m.jpg"
+                                            alt="img6"
+                                            class="advantages__item-img" />
+                                    </picture>
                                     <div class="advantages__item-info">
                                         <p class="advantages__item-text">
                                             Обучение: различные программы обучения и
@@ -289,12 +325,18 @@
                                 </li>
 
                                 <li class="advantages__item swiper-slide">
-                                    <img
-                                        src="./dist/img/advantages/adv7.jpg"
-                                        alt="image7"
-                                        class="advantages__item-img"
-                                        width="356"
-                                        height="178" />
+                                    <picture>
+                                        <source
+                                            media="(min-width: 1250px)"
+                                            srcset="./dist/img/advantages/adv7.jpg" />
+                                        <source
+                                            media="(min-width: 930px)"
+                                            srcset="./dist/img/advantages/adv7-m.jpg" />
+                                        <img
+                                            src="./dist/img/advantages/adv7-m.jpg"
+                                            alt="img7"
+                                            class="advantages__item-img" />
+                                    </picture>
                                     <div class="advantages__item-info">
                                         <p class="advantages__item-text">
                                             Возможности для реализации творческого потенциала
@@ -315,12 +357,18 @@
                                 </li>
 
                                 <li class="advantages__item swiper-slide">
-                                    <img
-                                        src="./dist/img/advantages/adv8.jpg"
-                                        alt="image8"
-                                        class="advantages__item-img"
-                                        width="356"
-                                        height="178" />
+                                    <picture>
+                                        <source
+                                            media="(min-width: 1250px)"
+                                            srcset="./dist/img/advantages/adv8.jpg" />
+                                        <source
+                                            media="(min-width: 930px)"
+                                            srcset="./dist/img/advantages/adv8-m.jpg" />
+                                        <img
+                                            src="./dist/img/advantages/adv8-m.jpg"
+                                            alt="img8"
+                                            class="advantages__item-img" />
+                                    </picture>
                                     <div class="advantages__item-info">
                                         <p class="advantages__item-text">
                                             Мы - семейная компания и любим проводить время вместе
@@ -339,12 +387,18 @@
                                 </li>
 
                                 <li class="advantages__item swiper-slide">
-                                    <img
-                                        src="./dist/img/advantages/adv9.jpg"
-                                        alt="image9"
-                                        class="advantages__item-img"
-                                        width="356"
-                                        height="178" />
+                                    <picture>
+                                        <source
+                                            media="(min-width: 1250px)"
+                                            srcset="./dist/img/advantages/adv9.jpg" />
+                                        <source
+                                            media="(min-width: 930px)"
+                                            srcset="./dist/img/advantages/adv9-m.jpg" />
+                                        <img
+                                            src="./dist/img/advantages/adv9-m.jpg"
+                                            alt="img9"
+                                            class="advantages__item-img" />
+                                    </picture>
                                     <div class="advantages__item-info">
                                         <p class="advantages__item-text">
                                             Мы - социально ответственная компания и заботимся об
