import swiper locally

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>CONECOM</title>
-        <link rel="stylesheet" href="./dist/css/style.min.css" />
         <link
             rel="apple-touch-icon"
             sizes="180x180"
@@ -20,6 +19,9 @@
             sizes="16x16"
             href="./dist/img/favicons/favicon-16x16.png" />
         <link rel="manifest" href="./dist/img/favicons/site.webmanifest" />
+
+        <link href="./dist/swiper/swiper-bundle.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="./dist/css/style.min.css" />
     </head>
     <body>
         <header class="main-header">
@@ -140,7 +142,10 @@
                     <div class="advantages__wrapper">
                         <div class="advantages__swiper swiper js_swiper_advantages">
                             <ul class="advantages__list swiper-wrapper">
-                                <li class="advantages__item swiper-slide">
+                                <li
+                                    class="advantages__item swiper-slide"
+                                    aria-label="1 / 9"
+                                    data-swiper-slide-index="0">
                                     <picture>
                                         <source
                                             media="(min-width: 1250px)"
@@ -171,7 +176,10 @@
                                     </div>
                                 </li>
 
-                                <li class="advantages__item swiper-slide">
+                                <li
+                                    class="advantages__item swiper-slide"
+                                    aria-label="2 / 9"
+                                    data-swiper-slide-index="1">
                                     <picture>
                                         <source
                                             media="(min-width: 1250px)"
@@ -203,7 +211,10 @@
                                     </div>
                                 </li>
 
-                                <li class="advantages__item swiper-slide">
+                                <li
+                                    class="advantages__item swiper-slide"
+                                    aria-label="3 / 9"
+                                    data-swiper-slide-index="2">
                                     <picture>
                                         <source
                                             media="(min-width: 1250px)"
@@ -232,7 +243,10 @@
                                     </div>
                                 </li>
 
-                                <li class="advantages__item swiper-slide">
+                                <li
+                                    class="advantages__item swiper-slide"
+                                    aria-label="4 / 9"
+                                    data-swiper-slide-index="3">
                                     <picture>
                                         <source
                                             media="(min-width: 1250px)"
@@ -263,7 +277,10 @@
                                     </div>
                                 </li>
 
-                                <li class="advantages__item swiper-slide">
+                                <li
+                                    class="advantages__item swiper-slide"
+                                    aria-label="5 / 9"
+                                    data-swiper-slide-index="4">
                                     <picture>
                                         <source
                                             media="(min-width: 1250px)"
@@ -292,7 +309,10 @@
                                     </div>
                                 </li>
 
-                                <li class="advantages__item swiper-slide">
+                                <li
+                                    class="advantages__item swiper-slide"
+                                    aria-label="6 / 9"
+                                    data-swiper-slide-index="5">
                                     <picture>
                                         <source
                                             media="(min-width: 1250px)"
@@ -324,7 +344,10 @@
                                     </div>
                                 </li>
 
-                                <li class="advantages__item swiper-slide">
+                                <li
+                                    class="advantages__item swiper-slide"
+                                    aria-label="7 / 9"
+                                    data-swiper-slide-index="6">
                                     <picture>
                                         <source
                                             media="(min-width: 1250px)"
@@ -356,7 +379,10 @@
                                     </div>
                                 </li>
 
-                                <li class="advantages__item swiper-slide">
+                                <li
+                                    class="advantages__item swiper-slide"
+                                    aria-label="8 / 9"
+                                    data-swiper-slide-index="7">
                                     <picture>
                                         <source
                                             media="(min-width: 1250px)"
@@ -386,7 +412,10 @@
                                     </div>
                                 </li>
 
-                                <li class="advantages__item swiper-slide">
+                                <li
+                                    class="advantages__item swiper-slide"
+                                    aria-label="9 / 9"
+                                    data-swiper-slide-index="8">
                                     <picture>
                                         <source
                                             media="(min-width: 1250px)"
@@ -429,6 +458,7 @@
             </section>
         </main>
 
+        <script src="./dist/swiper/swiper-bundle.min.js"></script>
         <script defer src="./dist/js/script.js"></script>
     </body>
 </html>
