--- a/src/index.html
+++ b/src/index.html
@@ -137,10 +137,10 @@
 
             <section class="advantages">
                 <div class="container">
-                    <h2 class="advantages__title">Наши преимущества2</h2>
-                    <div class="swiper js-swiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
+                    <h2 class="advantages__title">Наши преимущества</h2>
+                    <div class="swiper js_advantages-swiper">
+                        <div class="swiper-wrapper advantages__list">
+                            <div class="swiper-slide advantages__item">
                                 <picture>
                                     <source
                                         media="(min-width: 1250px)"
@@ -153,11 +153,13 @@
                                         alt="img1"
                                         class="advantages__item-img" />
                                 </picture>
-                                <div>
-                                    <p style="font-size: 20px">1Уверенность в завтрашнем дне</p>
-
-                                    <div class=" ">
-                                        <p class="">
+                                <div class="advantages__item-info">
+                                    <p class="advantages__item-text">
+                                        Уверенность в завтрашнем дне
+                                    </p>
+                                    <button class="advantages__item-button cross js_cross"></button>
+                                    <div class="advantages__item_additional js_hidden_text">
+                                        <p class="advantages__item_additional-text">
                                             ООО «Conecom», российское подразделение французского
                                             концерна DuffBeer. Мы компания, которая честно ведет
                                             свой бизнес на территории РФ, соблюдая законодательство
@@ -167,7 +169,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="swiper-slide advantages__item">
                                 <picture>
                                     <source
                                         media="(min-width: 1250px)"
@@ -180,13 +182,13 @@
                                         alt="img2"
                                         class="advantages__item-img" />
                                 </picture>
-                                <div class="">
-                                    <p style="font-size: 20px">
+                                <div class="advantages__item-info">
+                                    <p class="advantages__item-text">
                                         Безопасность на рабочем месте – приоритет №1
                                     </p>
-                                    <button class=""></button>
-                                    <div class="">
-                                        <p class="">
+                                    <button class="advantages__item-button cross js_cross"></button>
+                                    <div class="advantages__item_additional js_hidden_text">
+                                        <p class="advantages__item_additional-text">
                                             Вопросам безопасности и качества пищевой продукции в
                                             нашей компании уделяется повышенное внимание. Все
                                             производства группы DuffBeer в России постоянно работают
@@ -197,7 +199,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="swiper-slide advantages__item">
                                 <picture>
                                     <source
                                         media="(min-width: 1250px)"
@@ -210,11 +212,11 @@
                                         alt="img3"
                                         class="advantages__item-img" />
                                 </picture>
-                                <div class="">
-                                    <p style="font-size: 20px">Стабильная заработная плата</p>
-                                    <button></button>
-                                    <div class=" ">
-                                        <p class="">
+                                <div class="advantages__item-info">
+                                    <p class="advantages__item-text">Стабильная заработная плата</p>
+                                    <button class="advantages__item-button cross js_cross"></button>
+                                    <div class="advantages__item_additional js_hidden_text">
+                                        <p class="advantages__item_additional-text">
                                             Мы обеспечиваем нашим сотрудникам стабильную заработную
                                             плату в соответствии с рынком региона. Средний стаж
                                             работы в нашей компании – 7 лет.
@@ -222,7 +224,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="swiper-slide advantages__item">
                                 <picture>
                                     <source
                                         media="(min-width: 1250px)"
@@ -235,11 +237,13 @@
                                         alt="img4"
                                         class="advantages__item-img" />
                                 </picture>
-                                <div class="">
-                                    <p style="font-size: 20px">Заботимся о здоровье сотрудников</p>
-                                    <button class=""></button>
-                                    <div class=" ">
-                                        <p class="">
+                                <div class="advantages__item-info">
+                                    <p class="advantages__item-text">
+                                        Заботимся о здоровье сотрудников
+                                    </p>
+                                    <button class="advantages__item-button cross js_cross"></button>
+                                    <div class="advantages__item_additional js_hidden_text">
+                                        <p class="advantages__item_additional-text">
                                             Каждый сотрудник в нашей компании обеспечен полисом
                                             добровольного медицинского страхования. Кроме того, на
                                             каждом заводе есть медицинский пункт для сотрудников.
@@ -249,7 +253,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="swiper-slide advantages__item">
                                 <picture>
                                     <source
                                         media="(min-width: 1250px)"
@@ -262,21 +266,21 @@
                                         alt="img5"
                                         class="advantages__item-img" />
                                 </picture>
-                                <div class="">
-                                    <p style="font-size: 20px">
+                                <div class="advantages__item-info">
+                                    <p class="advantages__item-text">
                                         Предоставление удобной спецодежды и СИЗ для
                                         производственного персонала
                                     </p>
-                                    <button class=""></button>
-                                    <div class="">
-                                        <p class="">
+                                    <button class="advantages__item-button cross js_cross"></button>
+                                    <div class="advantages__item_additional js_hidden_text">
+                                        <p class="advantages__item_additional-text">
                                             Мы предоставляем удобные СИЗ и спецодежду и в случае
                                             износа или порчи обмениваются на новые.
                                         </p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="swiper-slide advantages__item">
                                 <picture>
                                     <source
                                         media="(min-width: 1250px)"
@@ -289,14 +293,14 @@
                                         alt="img6"
                                         class="advantages__item-img" />
                                 </picture>
-                                <div class="">
-                                    <p style="font-size: 20px">
+                                <div class="advantages__item-info">
+                                    <p class="advantages__item-text">
                                         Обучение: различные программы обучения и профессиональные
                                         тренинги
                                     </p>
-                                    <button class=""></button>
-                                    <div class=" ">
-                                        <p class="">
+                                    <button class="advantages__item-button cross js_cross"></button>
+                                    <div class="advantages__item_additional js_hidden_text">
+                                        <p class="advantages__item_additional-text">
                                             Мы уделяем много внимания развитию наших сотрудников. В
                                             компании работает Внутренний центр обучений и ежегодно
                                             проводится большое количество обучающих мероприятий как
@@ -306,7 +310,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="swiper-slide advantages__item">
                                 <picture>
                                     <source
                                         media="(min-width: 1250px)"
@@ -319,13 +323,13 @@
                                         alt="img7"
                                         class="advantages__item-img" />
                                 </picture>
-                                <div class="">
-                                    <p style="font-size: 20px">
+                                <div class="advantages__item-info">
+                                    <p class="advantages__item-text">
                                         Возможности для реализации творческого потенциала
                                     </p>
-                                    <button class=""></button>
-                                    <div class=" ">
-                                        <p class="">
+                                    <button class="advantages__item-button cross js_cross"></button>
+                                    <div class="advantages__item_additional js_hidden_text">
+                                        <p class="advantages__item_additional-text">
                                             Мы ставим перед собой амбициозные и интересные цели, а
                                             реализация задач является командной работой сотрудников
                                             из различных подразделений. Мы также принимаем активное
@@ -335,7 +339,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="swiper-slide advantages__item">
                                 <picture>
                                     <source
                                         media="(min-width: 1250px)"
@@ -348,13 +352,13 @@
                                         alt="img8"
                                         class="advantages__item-img" />
                                 </picture>
-                                <div class="">
-                                    <p style="font-size: 20px">
+                                <div class="advantages__item-info">
+                                    <p class="advantages__item-text">
                                         Мы - семейная компания и любим проводить время вместе
                                     </p>
-                                    <button class=""></button>
-                                    <div class=" ">
-                                        <p class="">
+                                    <button class="advantages__item-button cross js_cross"></button>
+                                    <div class="advantages__item_additional js_hidden_text">
+                                        <p class="advantages__item_additional-text">
                                             Ежегодно мы проводим корпоративные мероприятия не только
                                             для наших сотрудников, но и для семей наших сотрудников.
                                             А корпоративные подарки для детей сотрудников – наша
@@ -363,7 +367,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide">
+                            <div class="swiper-slide advantages__item">
                                 <picture>
                                     <source
                                         media="(min-width: 1250px)"
@@ -376,30 +380,28 @@
                                         alt="img9"
                                         class="advantages__item-img" />
                                 </picture>
-                                <div class="">
-                                    <p style="font-size: 20px">
+                                <div class="advantages__item-info">
+                                    <p class="advantages__item-text">
                                         Мы - социально ответственная компания и заботимся об
                                         окружающих
                                     </p>
-                                    <button class=""></button>
-                                    <div class=" ">
-                                        <p class="">
-                                            Наша миссия лежит в основе
-                                            социально-корпоративной ответственности. Мы ведем свою
-                                            деятельность в соответствии с тремя основными правилами:
-                                            мы заботимся о людях; наша деятельность устойчива по
-                                            своей природе; мы заботимся об окружающей среде.
+                                    <button class="advantages__item-button cross js_cross"></button>
+                                    <div class="advantages__item_additional js_hidden_text">
+                                        <p class="advantages__item_additional-text">
+                                            Наша миссия лежит в основе социально-корпоративной
+                                            ответственности. Мы ведем свою деятельность в
+                                            соответствии с тремя основными правилами: мы заботимся о
+                                            людях; наша деятельность устойчива по своей природе; мы
+                                            заботимся об окружающей среде.
                                         </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="swiper-pagination"></div>
-
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
                     </div>
+                    <div class="swiper-button-prev advantages__swiper-btn_prev"></div>
+                    <div class="swiper-button-next advantages__swiper-btn_next"></div>
+                    <div class="swiper-pagination advantages__swiper-pagination"></div>
                 </div>
             </section>
         </main>
