--- a/src/index.html
+++ b/src/index.html
@@ -137,8 +137,8 @@
 
             <section class="advantages">
                 <div class="container">
-                    <h2 class="advantages__title">Наши преимущества</h2>
-                    <div class="swiper js_advantages-swiper">
+                    <h2 class="advantages__title second-title">Наши преимущества</h2>
+                    <div class="swiper js_swiper_advantages">
                         <div class="swiper-wrapper advantages__list">
                             <div class="swiper-slide advantages__item">
                                 <picture>
@@ -160,7 +160,7 @@
                                     <button class="advantages__item-button cross js_cross"></button>
                                     <div class="advantages__item_additional js_hidden_text">
                                         <p class="advantages__item_additional-text">
-                                            ООО «Conecom», российское подразделение французского
+                                            ООО «CONECOM», российское подразделение французского
                                             концерна DuffBeer. Мы компания, которая честно ведет
                                             свой бизнес на территории РФ, соблюдая законодательство
                                             и гарантируя стабильность и уверенность в завтрашнем
@@ -399,8 +399,28 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-button-prev advantages__swiper-btn_prev"></div>
-                    <div class="swiper-button-next advantages__swiper-btn_next"></div>
+                    <div class="swiper-button-prev advantages__swiper-btn_prev">
+                        <svg
+                            width="11"
+                            height="8"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            preserveAspectRatio="none">
+                            <path
+                                d="M.646 3.646a.5.5 0 000 .708l3.182 3.182a.5.5 0 10.708-.708L1.707 4l2.829-2.828a.5.5 0 10-.708-.708L.646 3.646zM11 3.5H1v1h10v-1z" />
+                        </svg>
+                    </div>
+                    <div class="swiper-button-next advantages__swiper-btn_next">
+                        <svg
+                            width="12"
+                            height="8"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                            preserveAspectRatio="none">
+                            <path
+                                d="M11.354 4.354a.5.5 0 000-.708L8.172.464a.5.5 0 10-.708.708L10.293 4 7.464 6.828a.5.5 0 10.708.708l3.182-3.182zM0 4.5h11v-1H0v1z" />
+                        </svg>
+                    </div>
                     <div class="swiper-pagination advantages__swiper-pagination"></div>
                 </div>
             </section>
