fixes fermentation swiper

--- a/src/index.html
+++ b/src/index.html
@@ -572,16 +572,29 @@
                                     src="./dist/img/fermentation/frm1-s.jpg"
                                     alt="img1"
                                     class="fermentation__slide-img" />
-                                <p class="fermentation__slide-text">10 700+ сотрудников</p>
+                                <p class="fermentation__slide-text fermentation__slide-text_brown">
+                                    10 700+ сотрудников
+                                </p>
                             </div>
                             <div class="swiper-slide fermentation__slide">
                                 <img
                                     src="./dist/img/fermentation/frm2-s.jpg"
                                     alt="img2"
                                     class="fermentation__slide-img" />
-                                <p class="fermentation__slide-text">570 экспертов R&D</p>
+                                <p class="fermentation__slide-text fermentation__slide-text_blue">
+                                    570 экспертов R&D
+                                </p>
                             </div>
                             <div class="swiper-slide fermentation__slide">
+                                <img
+                                    src="./dist/img/fermentation/frm4-s.jpg"
+                                    alt="img4"
+                                    class="fermentation__slide-img" />
+                                <p class="fermentation__slide-text fermentation__slide-text_brown">
+                                    25+ лет в Росии
+                                </p>
+                            </div>
+                            <div class="swiper-slide fermentation__slide fermentation__slide_blue">
                                 <svg
                                     class="fermentation__slide-img"
                                     width="163"
@@ -599,25 +612,20 @@
                                         d="M162.5 0.150827V4.17287C162.5 5.31245 162.365 6.25092 162.095 6.98829C161.859 7.72567 161.606 8.34573 161.336 8.84848L131.338 69.0282C130.899 69.8997 130.292 70.6538 129.516 71.2906C128.741 71.8939 127.695 72.1956 126.38 72.1956H119.955L150.409 12.77C150.848 11.9321 151.286 11.1612 151.725 10.4573C152.197 9.75345 152.72 9.08311 153.293 8.44629H115.453C114.879 8.44629 114.357 8.22843 113.884 7.7927C113.446 7.32346 113.227 6.80395 113.227 6.23416V0.150827H162.5Z"
                                         fill="white" />
                                 </svg>
-                                <p class="fermentation__slide-text">
+                                <p class="fermentation__slide_blue-text">
                                     лет опыта на рынке хлебопечения
                                 </p>
-                            </div>
-                            <div class="swiper-slide fermentation__slide">
-                                <img
-                                    src="./dist/img/fermentation/frm4-s.jpg"
-                                    alt="img4"
-                                    class="fermentation__slide-img" />
-                                <p class="fermentation__slide-text">25+ лет в Росии</p>
                             </div>
                             <div class="swiper-slide fermentation__slide">
                                 <img
                                     src="./dist/img/fermentation/frm5-s.jpg"
                                     alt="img5"
                                     class="fermentation__slide-img" />
-                                <p class="fermentation__slide-text">Филиалы в 50 странах</p>
+                                <p class="fermentation__slide-text fermentation__slide-text_brown">
+                                    Филиалы в 50 странах
+                                </p>
                             </div>
-                            <div class="swiper-slide fermentation__slide">
+                            <div class="swiper-slide fermentation__slide fermentation__slide_blue">
                                 <svg
                                     class="fermentation__slide-img"
                                     width="59"
@@ -629,7 +637,9 @@
                                         d="M47.1454 49.2198H59V54.7006C59 55.2738 58.8179 55.7574 58.4537 56.1514C58.1259 56.5455 57.5978 56.7425 56.8694 56.7425H47.1454V77H38.5685V56.7425H3.8787C3.15031 56.7425 2.51296 56.5455 1.96667 56.1514C1.45679 55.7216 1.12901 55.2021 0.983333 54.5932L0 49.7034L38.0769 0H47.1454V49.2198ZM38.5685 17.4634C38.5685 16.532 38.5867 15.529 38.6231 14.4543C38.696 13.3796 38.8235 12.2691 39.0056 11.1228L10.5435 49.2198H38.5685V17.4634Z"
                                         fill="white" />
                                 </svg>
-                                <p class="fermentation__slide-text">направления деятельности</p>
+                                <p class="fermentation__slide_blue-text">
+                                    направления деятельности
+                                </p>
                             </div>
                         </div>
                     </div>
