--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                 <section class="experience">
                     <h2 class="experience__title visually-hidden">167 лет опыта</h2>
                     <div class="experience__video">
-                        <!-- <iframe
+                        <iframe
                             width="1054"
                             height="593"
                             src="https://www.youtube.com/embed/BJiucv88flM"
@@ -60,7 +60,7 @@
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin"
                             allowfullscreen>
-                        </iframe> -->
+                        </iframe>
                     </div>
                     <div class="experience__info">
                         <div class="experience__info_years">
