change video from youtube to rutube

--- a/src/index.html
+++ b/src/index.html
@@ -51,13 +51,24 @@
                 <section class="experience">
                     <h2 class="experience__title visually-hidden">167 лет опыта</h2>
                     <div class="experience__video">
-                        <iframe
+                        <!-- <iframe
                             width="1054"
                             height="593"
                             src="https://www.youtube.com/embed/BJiucv88flM"
                             title="How to knead bread dough"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin"
+                            allowfullscreen>
+                        </iframe> -->
+
+                        <iframe
+                            width="720"
+                            height="405"
+                            src="https://rutube.ru/play/embed/cf6f0b5f063809f1d62af9c11fe65005/"
+                            frameborder="0"
+                            allow="clipboard-write; autoplay"
+                            webkitAllowFullScreen
+                            mozallowfullscreen
                             allowfullscreen>
                         </iframe>
                     </div>
